Bug 1025197 - Only clear the "recording hint" when switching to picture mode. r=dhylands, a=1.4+